<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cd_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="30dp"
    card_view:cardCornerRadius="20dp"
    tools:context="com.franvara.ricklantis.presentation.detail.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_detail_character"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:transitionName="@string/transition_imagen"
                card_view:srcCompat="@drawable/character_image_default" />

            <TextView
                android:id="@+id/tv_detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:background="#AA000000"
                android:ellipsize="end"
                android:gravity="bottom"
                android:maxLines="2"
                android:padding="@dimen/margin_16"
                android:textColor="#FFF"
                android:textSize="@dimen/text_size_20"
                android:transitionName="@string/transition_name"
                tools:text="Character name" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/card_background"
            android:orientation="vertical"
            android:padding="@dimen/margin_30">

            <LinearLayout
                android:id="@+id/ll_detail_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:text="@string/detail_status"
                    android:textColor="@color/card_text" />

                <TextView
                    android:id="@+id/tv_detail_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:textAlignment="textEnd"
                    android:textColor="@color/card_text_answer"
                    tools:text="@string/demo_text" />

            </LinearLayout>

            <View
                android:layout_marginTop="@dimen/margin_8"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/card_separator"/>

            <LinearLayout
                android:id="@+id/ll_detail_species"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:text="@string/detail_species"
                    android:textColor="@color/card_text" />

                <TextView
                    android:id="@+id/tv_detail_species"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:textAlignment="textEnd"
                    android:textColor="@color/card_text_answer"
                    tools:text="@string/demo_text"/>

            </LinearLayout>

            <View
                android:layout_marginTop="@dimen/margin_8"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/card_separator"/>

            <LinearLayout
                android:id="@+id/ll_detail_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:text="@string/detail_gender"
                    android:textColor="@color/card_text" />

                <TextView
                    android:id="@+id/tv_detail_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:textAlignment="textEnd"
                    android:textColor="@color/card_text_answer"
                    tools:text="@string/demo_text"/>

            </LinearLayout>

            <View
                android:layout_marginTop="@dimen/margin_8"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/card_separator"/>

            <LinearLayout
                android:id="@+id/ll_detail_origin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:text="@string/detail_origin"
                    android:textColor="@color/card_text" />

                <TextView
                    android:id="@+id/tv_detail_origin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:textAlignment="textEnd"
                    android:textColor="@color/card_text_answer"
                    tools:text="@string/demo_text"/>

            </LinearLayout>

            <View
                android:layout_marginTop="@dimen/margin_8"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/card_separator"/>

            <LinearLayout
                android:id="@+id/ll_detail_last_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:text="@string/detail_last_location"
                    android:textColor="@color/card_text" />

                <TextView
                    android:id="@+id/tv_detail_last_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:textAlignment="textEnd"
                    android:textColor="@color/card_text_answer"
                    tools:text="@string/demo_text"/>

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>
